--- a/index.html
+++ b/index.html
@@ -1,249 +1,40 @@
-<!DOCTYPE html>
-<html lang="tr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TRKM EDIT v3.1 | Stable</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.3.1/fabric.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;900&family=Oswald:wght@700&family=Roboto+Mono&display=swap" rel="stylesheet">
-    <style>
-        body { background-color: #080808; font-family: 'Inter', sans-serif; overflow: hidden; color: #eee; }
-        .canvas-container { margin: 0 auto !important; box-shadow: 0 0 100px rgba(0,0,0,1); border: 1px solid #222; }
-        .tool-btn { @apply w-12 h-12 flex items-center justify-center rounded-xl transition-all text-gray-500 hover:bg-[#1a1a1a]; }
-        .active-tool { @apply bg-blue-600 text-white shadow-[0_0_20px_rgba(37,99,235,0.4)]; }
-        .hd-btn { @apply bg-gradient-to-br from-purple-600 to-blue-600 hover:from-purple-500 hover:to-blue-500 text-white font-black rounded-lg transition-all active:scale-95; }
-        #context-menu { position: absolute; display: none; background: #151515; border: 1px solid #333; border-radius: 8px; z-index: 9999; width: 170px; padding: 5px; box-shadow: 0 10px 30px rgba(0,0,0,0.8); }
-        #context-menu button { width: 100%; text-align: left; padding: 8px 12px; font-size: 11px; color: #ccc; border-radius: 4px; display: flex; align-items: center; gap: 8px; }
-        #context-menu button:hover { background: #3b82f6; color: white; }
-        input[type="range"] { accent-color: #3b82f6; height: 4px; background: #333; appearance: none; border-radius: 2px; }
-    </style>
-</head>
-<body class="flex flex-col h-screen select-none">
+// Magic Mod v3.2 - Canva Entegrasyon İyileştirmesi
+const magicMod = {
+    version: "3.2",
+    isActive: true,
+    
+    init() {
+        this.bindEvents();
+        console.log(`Magic Mod v${this.version} aktif. Dış tık algılama devrede.`);
+    },
 
-    <header class="h-14 bg-[#0a0a0a] border-b border-[#222] flex items-center justify-between px-6 z-50">
-        <div class="flex items-center gap-4">
-            <span class="font-black text-lg tracking-tighter italic">TRKM <span class="text-blue-500">EDIT</span> <span class="text-[10px] bg-gray-800 px-2 py-0.5 rounded text-gray-400 ml-2">v3.1</span></span>
-            <div class="text-[9px] bg-blue-500/10 text-blue-400 px-3 py-1 rounded-full border border-blue-500/20 font-bold uppercase" id="mode-tag">SEÇİM MODU</div>
-        </div>
-        <div class="flex gap-2">
-            <button onclick="undo()" class="px-4 py-2 bg-[#111] border border-[#222] rounded-lg text-[10px] text-blue-400 font-black">GERİ AL</button>
-            <button onclick="downloadImage()" class="bg-blue-600 text-white px-5 py-2 rounded-lg text-[10px] font-black uppercase">Kaydet</button>
-        </div>
-    </header>
+    bindEvents() {
+        // Yazı yazdıktan sonra dışarı tıklandığında moddan çıkış yap
+        document.addEventListener('mousedown', (e) => {
+            const editorPanel = document.getElementById('magic-editor-panel');
+            const isClickInside = editorPanel?.contains(e.target);
 
-    <div id="context-menu">
-        <button onclick="copyObject()"><i class="fa-solid fa-copy"></i> Kopyala</button>
-        <button onclick="manualPaste()"><i class="fa-solid fa-paste"></i> Yapıştır</button>
-        <div class="h-[1px] bg-[#222] my-1"></div>
-        <button onclick="deleteSelected()" class="text-red-500"><i class="fa-solid fa-trash"></i> Sil</button>
-    </div>
-
-    <div class="flex flex-1 overflow-hidden">
-        <aside class="w-16 bg-[#0a0a0a] border-r border-[#222] flex flex-col items-center py-4 gap-2">
-            <button id="btn-select" onclick="setMode('select')" class="tool-btn active-tool"><i class="fa-solid fa-arrow-pointer"></i></button>
-            <button id="btn-brush" onclick="setMode('brush')" class="tool-btn"><i class="fa-solid fa-paintbrush"></i></button>
-            <button id="btn-eraser" onclick="setMode('eraser')" class="tool-btn"><i class="fa-solid fa-eraser"></i></button>
-            <button id="btn-text" onclick="setMode('text')" class="tool-btn"><i class="fa-solid fa-font"></i></button>
-            <button id="btn-rect" onclick="setMode('rect')" class="tool-btn"><i class="fa-solid fa-square"></i></button>
-            <button id="btn-magic" onclick="setMode('magic')" class="tool-btn text-purple-500"><i class="fa-solid fa-wand-magic-sparkles"></i></button>
-            <div class="mt-auto mb-4 flex flex-col gap-3">
-                <input type="color" id="colorPicker" value="#3b82f6" class="w-8 h-8 bg-transparent cursor-pointer rounded-lg border border-[#333]">
-            </div>
-        </aside>
-
-        <main class="flex-1 bg-[#050505] relative flex items-center justify-center p-4">
-            <canvas id="mainCanvas"></canvas>
-            <div class="absolute bottom-4 left-4 bg-[#0a0a0a]/90 p-3 rounded-lg border border-[#222] text-[9px] text-gray-400">
-                <p><span class="text-white font-mono">1:</span> Menü | <span class="text-white font-mono">V:</span> Seçim | <span class="text-white font-mono">R:</span> Kare</p>
-                <p><span class="text-green-500 font-mono">CTRL+V:</span> Görsel Yapıştır</p>
-            </div>
-        </main>
-
-        <aside class="w-72 bg-[#0a0a0a] border-l border-[#222] p-5 flex flex-col gap-6">
-            <section class="border-b border-[#222] pb-4">
-                <h3 class="text-[10px] font-black text-gray-500 uppercase tracking-widest mb-3 text-blue-500">Yazı Ayarları</h3>
-                <div class="space-y-3">
-                    <div class="flex items-center justify-between">
-                        <label class="text-[10px] text-gray-400 font-bold">RENK</label>
-                        <input type="color" id="textColorPicker" oninput="changeTextColor(this.value)" value="#ffffff" class="w-10 h-6 bg-transparent cursor-pointer">
-                    </div>
-                    <select id="fontSelect" onchange="changeFontStyle()" class="w-full bg-[#111] border border-[#222] rounded p-2 text-xs">
-                        <option value="Inter">Modern (Inter)</option>
-                        <option value="Oswald">Kalın (Oswald)</option>
-                        <option value="Roboto Mono">Mono</option>
-                    </select>
-                    <button onclick="addText()" class="w-full py-2 bg-blue-600/10 text-blue-500 border border-blue-500/20 rounded text-[10px] font-bold">YENİ YAZI EKLE</button>
-                </div>
-            </section>
-
-            <section>
-                <h3 class="text-[10px] font-black text-gray-500 uppercase tracking-widest mb-3">Görsel Kontrol</h3>
-                <div class="space-y-2">
-                    <div class="flex justify-between text-[10px] font-bold text-gray-400">
-                        <span>PARLAKLIK</span><span id="v-bright" class="text-blue-500">0.00</span>
-                    </div>
-                    <input type="range" id="brightness" min="-1" max="1" step="0.01" value="0" class="w-full">
-                    <button onclick="enhanceQuality()" class="hd-btn w-full py-3 mt-2 text-[10px]">HD KALİTEYİ ARTIR</button>
-                </div>
-            </section>
-
-            <button onclick="document.getElementById('fileInput').click()" class="mt-auto px-4 py-3 bg-[#111] border border-[#222] rounded-lg text-[10px] font-bold text-blue-500 uppercase">Resim Yükle</button>
-            <input type="file" id="fileInput" accept="image/*" class="hidden">
-        </aside>
-    </div>
-
-    <script>
-        const canvas = new fabric.Canvas('mainCanvas', { width: 800, height: 550, backgroundColor: '#111' });
-        let history = [], clipboard = null, mousePos = { x: 0, y: 0 }, currentMode = 'select';
-        let isDrawingRect = false, rectObj = null, startX, startY;
-
-        fabric.Object.prototype.set({
-            transparentCorners: false, cornerColor: '#3b82f6', borderColor: '#3b82f6', cornerSize: 8, padding: 0
-        });
-
-        document.addEventListener('mousemove', e => { mousePos.x = e.pageX; mousePos.y = e.pageY; });
-
-        // --- RECT MODU FIX ---
-        canvas.on('mouse:down', function(o) {
-            if (currentMode !== 'rect') return;
-            isDrawingRect = true;
-            let pointer = canvas.getPointer(o.e);
-            startX = pointer.x; startY = pointer.y;
-            rectObj = new fabric.Rect({
-                left: startX, top: startY, width: 0, height: 0,
-                fill: document.getElementById('colorPicker').value,
-                stroke: '#ffffff', strokeWidth: 0
-            });
-            canvas.add(rectObj);
-        });
-
-        canvas.on('mouse:move', function(o) {
-            if (!isDrawingRect) return;
-            let pointer = canvas.getPointer(o.e);
-            if (startX > pointer.x) rectObj.set({ left: pointer.x });
-            if (startY > pointer.y) rectObj.set({ top: pointer.y });
-            rectObj.set({ width: Math.abs(startX - pointer.x), height: Math.abs(startY - pointer.y) });
-            canvas.renderAll();
-        });
-
-        canvas.on('mouse:up', function() {
-            if (isDrawingRect) {
-                isDrawingRect = false;
-                rectObj.setCoords();
-                saveState();
-                setMode('select'); // Çizim bitince otomatik seçim moduna dön
+            if (!isClickInside && this.isActive) {
+                this.closeMagicMod();
             }
         });
 
-        // --- DİĞER FONKSİYONLAR ---
-        function setMode(mode) {
-            currentMode = mode;
-            document.querySelectorAll('.tool-btn').forEach(b => b.classList.remove('active-tool'));
-            canvas.isDrawingMode = (mode === 'brush' || mode === 'eraser');
-            document.getElementById('mode-tag').innerText = mode.toUpperCase() + " MODU";
-            const btn = document.getElementById('btn-' + mode);
-            if(btn) btn.classList.add('active-tool');
-            
-            if (canvas.isDrawingMode) {
-                canvas.freeDrawingBrush = new fabric.PencilBrush(canvas);
-                canvas.freeDrawingBrush.width = 10;
-                canvas.freeDrawingBrush.color = (mode === 'brush') ? document.getElementById('colorPicker').value : '#111';
-            }
+        // ESC tuşuyla hızlı çıkış desteği
+        document.addEventListener('keydown', (e) => {
+            if (e.key === "Escape") this.closeMagicMod();
+        });
+    },
+
+    closeMagicMod() {
+        this.isActive = false;
+        const panel = document.getElementById('magic-editor-panel');
+        if (panel) {
+            panel.style.display = 'none';
+            // Canva canvas'ına odağı geri ver
+            document.querySelector('.canva-canvas-container')?.focus();
         }
+        console.log("Magic Mod v3.2: Dış tık algılandı, mod kapatıldı.");
+    }
+};
 
-        function addText() {
-            const text = new fabric.IText('TRKM EDIT v3.1', {
-                left: 100, top: 100, fontFamily: document.getElementById('fontSelect').value,
-                fill: document.getElementById('textColorPicker').value, fontSize: 40, fontWeight: 'bold'
-            });
-            canvas.add(text).setActiveObject(text);
-            saveState();
-        }
-
-        function changeTextColor(value) {
-            const active = canvas.getActiveObject();
-            if (active && (active.type === 'i-text' || active.type === 'text')) {
-                active.set('fill', value); canvas.renderAll(); saveState();
-            }
-        }
-
-        function changeFontStyle() {
-            const obj = canvas.getActiveObject();
-            if (obj && obj.type === 'i-text') {
-                obj.set('fontFamily', document.getElementById('fontSelect').value);
-                canvas.renderAll(); saveState();
-            }
-        }
-
-        document.getElementById('brightness').addEventListener('input', e => {
-            const val = parseFloat(e.target.value);
-            document.getElementById('v-bright').innerText = val.toFixed(2);
-            const obj = canvas.getActiveObject();
-            if(obj && obj.type === 'image') {
-                obj.filters[0] = new fabric.Image.filters.Brightness({ brightness: val });
-                obj.applyFilters(); canvas.renderAll();
-            }
-        });
-
-        function enhanceQuality() {
-            const obj = canvas.getActiveObject();
-            if (!obj || obj.type !== 'image') return;
-            obj.filters.push(new fabric.Image.filters.Contrast({ contrast: 0.15 }));
-            obj.filters.push(new fabric.Image.filters.Convolute({ matrix: [ 0, -1, 0, -1, 5, -1, 0, -1, 0 ] }));
-            obj.applyFilters(); canvas.renderAll(); saveState();
-        }
-
-        // --- SISTEM ---
-        window.addEventListener('paste', e => {
-            const items = (e.clipboardData || e.originalEvent.clipboardData).items;
-            for (let index in items) {
-                if (items[index].kind === 'file') {
-                    const blob = items[index].getAsFile();
-                    const reader = new FileReader();
-                    reader.onload = (f) => fabric.Image.fromURL(f.target.result, img => {
-                        img.scaleToWidth(300); canvas.add(img).centerObject(img); saveState();
-                    });
-                    reader.readAsDataURL(blob);
-                }
-            }
-        });
-
-        window.addEventListener('keydown', e => {
-            const key = e.key.toLowerCase();
-            const activeObj = canvas.getActiveObject();
-            if (activeObj && activeObj.isEditing) return;
-            if (key === '1') {
-                e.preventDefault();
-                const menu = document.getElementById('context-menu');
-                menu.style.display = (menu.style.display === 'block') ? 'none' : 'block';
-                menu.style.left = mousePos.x + 'px'; menu.style.top = mousePos.y + 'px';
-            }
-            if (key === 'v') setMode('select');
-            if (key === 'r') setMode('rect');
-            if (key === 't') { setMode('text'); addText(); }
-            if (key === 'delete' || key === 'backspace') deleteSelected();
-        });
-
-        function deleteSelected() {
-            const active = canvas.getActiveObject();
-            if (!active || active.isEditing) return;
-            canvas.remove(...(active.type === 'activeSelection' ? active.getObjects() : [active]));
-            canvas.discardActiveObject().renderAll(); saveState();
-        }
-
-        function saveState() { history.push(JSON.stringify(canvas)); if(history.length > 30) history.shift(); }
-        function undo() { if(history.length > 1) { history.pop(); canvas.loadFromJSON(history[history.length-1], () => canvas.renderAll()); } }
-        function downloadImage() { const a = document.createElement('a'); a.download = 'trkm_v3_1.png'; a.href = canvas.toDataURL(); a.click(); }
-
-        document.getElementById('fileInput').addEventListener('change', e => {
-            const reader = new FileReader();
-            reader.onload = f => fabric.Image.fromURL(f.target.result, img => { img.scaleToWidth(400); canvas.add(img).centerObject(img); });
-            reader.readAsDataURL(e.target.files[0]);
-        });
-
-        saveState();
-    </script>
-</body>
-</html>
+magicMod.init();
